# PICOMIDI

./: CMakeLists.txt  README.md
.github/workflows/: ci.y  ci.yml
include/: config.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
libs/: libs.here
src/: din_midi.c  din_midi.h  main.c  midi_router.c  midi_router.h  tusb_midi_host.c  usb_descriptors.c  usb_midi_host.c  usb_midi_host.h
